@startuml
class com.directi.training.ocp.exercise_refactored.TimeSlot {
+ int findFree()
+ void markBusy(int)
+ void markFree(int)
}
class com.directi.training.ocp.exercise_refactored.SpaceSlot {
+ int findFree()
+ void markBusy(int)
+ void markFree(int)
}
class com.directi.training.ocp.exercise_refactored.ResourceAllocator {
+ int allocate(Resource)
+ void free(Resource,int)
}
interface com.directi.training.ocp.exercise_refactored.Resource {
~ int findFree()
~ void markBusy(int)
~ void markFree(int)
}


com.directi.training.ocp.exercise_refactored.Resource <|.. com.directi.training.ocp.exercise_refactored.TimeSlot
com.directi.training.ocp.exercise_refactored.Resource <|.. com.directi.training.ocp.exercise_refactored.SpaceSlot
@enduml